@@ -47,6 +47,23 @@ void twitter_api_get_home_timeline(TwitterRequestor *r,
 		TwitterSendRequestErrorFunc error_func,
 		gpointer data);
 
+void twitter_api_get_list(TwitterRequestor *r,
+		const gchar * list_id,
+		long long since_id,
+		int count,
+		int page,
+		TwitterSendXmlRequestSuccessFunc success_func,
+		TwitterSendRequestErrorFunc error_func,
+		gpointer data);
+
+void twitter_api_get_list_all(TwitterRequestor *r,
+		const gchar * list_id,
+		long long since_id,
+		TwitterSendRequestMultiPageAllSuccessFunc success_func,
+		TwitterSendRequestMultiPageAllErrorFunc error_func,
+		gint max_count,
+		gpointer data);
+
 void twitter_api_get_dms(TwitterRequestor *r,
 		long long since_id,
 		int count,
